--- a/sass/style.scss
+++ b/sass/style.scss
@@ -118,3 +118,26 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+/* Tags */
+
+.list.tags .tag-size-1 {
+  font-size: 14px;  
+}
+
+.list.tags .tag-size-2 {
+  font-size: 18px;
+  }
+
+.list.tags .tag-size-3 {
+  font-size: 22px;
+  }
+
+.list.tags .tag-size-4 {
+  font-size: 26px;
+}
+
+.list.tags .tag-size-5 {
+  font-size: 30px;
+  }
+
